MDEV-17411 Wrong WHERE optimization with simple CASE and searched CASE